# s3-proxy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  test_app.py
.github/workflows/: docker.yml  pre-commit.yml  test.yml
